Update list websites for personal and works

--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
       </style>
     </noscript>
   </head>
-
   <body>
     <main>
       <div id="top-div">
         <div id="clock-div">
           <h1 id="clock">00/00/0000 00:00:00</h1>
         </div>
-
         <form id="search-form" action="https://google.com">
           <div id="search-bar-wrapper">
             <input id="search-bar" name="q" type="text" title="Search" placeholder="Search"/>
           </div>
         </form>
       </div>
-
       <div id="links-container">
         <section class="link-section">
-          <h2 class="link-section-title blue">Google</h2>
+          <h2 class="link-section-title blue">Google Apps</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
-              <a class="link" href="https://classroom.google.com/">Classroom</a>
+              <a class="link" href="https://calendar.google.com/">Calendar</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://drive.google.com/">Drive</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://mail.google.com/">Gmail</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://maps.google.com/">Google Maps</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://translate.google.com/">Translate</a>
@@ -51,14 +51,20 @@
           </ul>
         </section>
         <section class="link-section">
-          <h2 class="link-section-title red">Social Media</h2>
+          <h2 class="link-section-title red">Personal</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
               <a class="link" href="https://web.facebook.com/">Facebook</a>
             </li>
             <li class="link-list-item">
+              <a class="link" href="https://github.com/">Github</a>
+            </li>
+            <li class="link-list-item">
               <a class="link" href="https://instagram.com/">Instagram</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://linkedin.com/">LinkedIn</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://reddit.com/">Reddit</a>
@@ -66,58 +72,58 @@
             <li class="link-list-item">
               <a class="link" href="https://twitter.com/">Twitter</a>
             </li>
+          </ul>
+        </section>
+        <section class="link-section">
+          <h2 class="link-section-title yellow">Works 1</h2>
+          <hr />
+          <ul class="link-list">
             <li class="link-list-item">
-              <a class="link" href="https://web.whatsapp.com/">Whatsapp</a>
+              <a class="link" href="https://btech18.sharepoint.com/:x:/s/cx/EUkNJFk2qnNMqUXZ50gHz8sBGVARDUzUXb3jOQzMVAS-TA?e=uZDHp6">Jadwal Cusex</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://teams.microsoft.com/">Microsoft Teams</a>
+            </li>            
+            <li class="link-list-item">
+              <a class="link" href="https://https://outlook.office.com/mail/">Outlook</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://btech18-my.sharepoint.com/personal/febry_btech_id">SharePoint</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://tasks.office.com/btech.id/Home/PlanViews/vjkvgWncYUOweZPvuJZY9skABJd8?Type=PlanLink&Channel=Link&CreatedTime=638156510341290000">Task Planner</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://teams.btech.id/">TeamPass</a>
             </li>
           </ul>
         </section>
         <section class="link-section">
-          <h2 class="link-section-title yellow">Education</h2>
+          <h2 class="link-section-title green">Works 2</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
-              <a class="link" href="https://eling.ub.ac.id/">Eling</a>
+              <a class="link" href="https://book.btech.id/">Bookstack Btech</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://filkom.ub.ac.id/">Filkom UB</a>
+              <a class="link" href="https://cx-jumpserver.btech.id/">CX JumpServer</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://github.com/">GitHub</a>
+              <a class="link" href="https://cloud.digitalocean.com/">Digital Ocean</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://scholar.google.co.id/"
-                >Google Scholar</a
-              >
+              <a class="link" href="https://go.btech.id/">Gitlab Go Btech</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://siam.ub.ac.id/">SIAM UB</a>
-            </li>
-          </ul>
-        </section>
-        <section class="link-section">
-          <h2 class="link-section-title green">Miscellaneous</h2>
-          <hr />
-          <ul class="link-list">
-            <li class="link-list-item">
-              <a class="link" href="https://dev.to/">Dev.to</a>
+              <a class="link" href="https://netmon.btech.id/">Grafana Btech</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://kumparan.com/">Kumparan</a>
-            </li>
-            <li class="link-list-item">
-              <a class="link" href="https://sci-hub.se/">Sci-hub</a>
-            </li>
-            <li class="link-list-item">
-              <a class="link" href="https://tirto.id/">Tirto.id</a>
-            </li>
-            <li class="link-list-item">
-              <a class="link" href="https://tokopedia.com/">Tokopedia</a>
+              <a class="link" href="https://portal.biznetgio.com/">Portal BiznetGIO</a>
             </li>
           </ul>
         </section>
       </div>
     </main>
-
     <script src="js/main.js"></script>
   </body>
 </html>
