--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
               <a class="link" href="https://cx-jumpserver.btech.id/">CX JumpServer</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://cloud.digitalocean.com/">Digital Ocean</a>
-            </li>
-            <li class="link-list-item">
               <a class="link" href="https://go.btech.id/">Gitlab Go Btech</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://netmon.btech.id/">Grafana Btech</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://erp.btech.id/">Odoo ERP Btech</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://portal.biznetgio.com/">Portal BiznetGIO</a>
