--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </ul>
         </section>
         <section class="link-section">
-          <h2 class="link-section-title yellow">Works 1</h2>
+          <h2 class="link-section-title yellow">Btech 1</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
@@ -85,7 +85,7 @@
               <a class="link" href="https://teams.microsoft.com/">Microsoft Teams</a>
             </li>            
             <li class="link-list-item">
-              <a class="link" href="https://https://outlook.office.com/mail/">Outlook</a>
+              <a class="link" href="https://outlook.office.com/mail/">Outlook</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://btech18-my.sharepoint.com/personal/febry_btech_id">SharePoint</a>
@@ -99,7 +99,7 @@
           </ul>
         </section>
         <section class="link-section">
-          <h2 class="link-section-title green">Works 2</h2>
+          <h2 class="link-section-title green">Btech 2</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
