update jadwal cusex

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
-              <a class="link" href="https://btech18.sharepoint.com/:x:/s/cx/EUkNJFk2qnNMqUXZ50gHz8sBGVARDUzUXb3jOQzMVAS-TA?e=uZDHp6">Jadwal Cusex</a>
+              <a class="link" href="https://btech18.sharepoint.com/:x:/s/cx/EUkNJFk2qnNMqUXZ50gHz8sBWYy0ZbmsA3uA_BVBUIH3aA?e=99hny3">Jadwal Cusex</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://teams.microsoft.com/">Microsoft Teams</a>
