--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
       </div>
       <div id="links-container">
         <section class="link-section">
-          <h2 class="link-section-title blue">Google Apps</h2>
+          <h2 class="link-section-title blue">Google Workspace</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
-              <a class="link" href="https://calendar.google.com/">Calendar</a>
+              <a class="link" href="https://calendar.google.com/">Google Calendar</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://drive.google.com/">Drive</a>
+              <a class="link" href="https://drive.google.com/">Google Drive</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://mail.google.com/">Gmail</a>
+              <a class="link" href="https://mail.google.com/">Google Gmail</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://maps.google.com/">Google Maps</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://translate.google.com/">Translate</a>
+              <a class="link" href="https://translate.google.com/">Google Translate</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://youtube.com/">Youtube</a>
@@ -75,23 +75,23 @@
           </ul>
         </section>
         <section class="link-section">
-          <h2 class="link-section-title yellow">Btech 1</h2>
+          <h2 class="link-section-title yellow">Work 1</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
-              <a class="link" href="https://btech18.sharepoint.com/:x:/s/cx/EUkNJFk2qnNMqUXZ50gHz8sBWYy0ZbmsA3uA_BVBUIH3aA?e=99hny3">Jadwal Cusex</a>
+              <a class="link" href="https://btech18-my.sharepoint.com/personal/febry_btech_id">Microsoft OneDrive</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://tasks.office.com/btech.id/Home/PlanViews/vjkvgWncYUOweZPvuJZY9skABJd8?Type=PlanLink&Channel=Link&CreatedTime=638156510341290000">Microsoft Planner</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://teams.microsoft.com/">Microsoft Teams</a>
+            </li>
+            <li class="link-list-item">
+              <a class="link" href="https://outlook.office.com/calendar/view/month">Outlook Calendar</a>
             </li>            
             <li class="link-list-item">
-              <a class="link" href="https://outlook.office.com/mail/">Outlook</a>
-            </li>
-            <li class="link-list-item">
-              <a class="link" href="https://btech18-my.sharepoint.com/personal/febry_btech_id">SharePoint</a>
-            </li>
-            <li class="link-list-item">
-              <a class="link" href="https://tasks.office.com/btech.id/Home/PlanViews/vjkvgWncYUOweZPvuJZY9skABJd8?Type=PlanLink&Channel=Link&CreatedTime=638156510341290000">Task Planner</a>
+              <a class="link" href="https://outlook.office.com/mail/">Outlook Mail</a>
             </li>
             <li class="link-list-item">
               <a class="link" href="https://teams.btech.id/">TeamPass</a>
@@ -99,7 +99,7 @@
           </ul>
         </section>
         <section class="link-section">
-          <h2 class="link-section-title green">Btech 2</h2>
+          <h2 class="link-section-title green">Work 2</h2>
           <hr />
           <ul class="link-list">
             <li class="link-list-item">
