--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <a class="link" href="https://reddit.com/">Reddit</a>
             </li>
             <li class="link-list-item">
-              <a class="link" href="https://twitter.com/">Twitter</a>
+              <a class="link" href="https://x.com/">X/Twitter</a>
             </li>
           </ul>
         </section>
